# nest-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ONBOARDING.md  PHASE-D-OAUTH-REVERSE-ENGINEERING-PLAN.md  SECURITY.md  SRD-nest-cli.md
nest_cli/: __init__.py  __main__.py  config.py  errors.py  output.py
nest_cli/auth/: __init__.py  credentials.py  oauth.py  types.py  wifi_credentials.py  wifi_types.py
nest_cli/cli/: __init__.py  _fanout.py  _shared.py  auth_cmd.py  batch_cmd.py  cam_cmd.py  cam_events_cmd.py  cam_stream_cmd.py  config_cmd.py  list_cmd.py  wifi_cmd.py
nest_cli/sdm/: __init__.py  client.py  event_types.py  stream_types.py  types.py
nest_cli/wifi/: __init__.py  client.py  types.py
scripts/: smoke-cam.py  smoke-wifi.py
tests/: test_cli_cam.py  test_cli_config.py  test_cli_list.py  test_config.py  test_errors.py  test_output.py  test_skeleton.py
tests/auth/: test_auth_cli.py  test_auth_wifi_cli.py  test_credentials.py  test_oauth.py  test_wifi_credentials.py  test_wifi_refresh_bootstrap.py
tests/batch/: __init__.py  test_batch_file.py  test_batch_signal.py  test_batch_stdin.py  test_cam_info_group.py  test_cross_family_group.py  test_fan_out_concurrency.py  test_fan_out_exit_codes.py  test_resolve_target_or_group.py  test_wifi_pause_group.py
tests/cam/: __init__.py  conftest.py  test_battery.py  test_chime.py  test_events.py  test_events_follow.py  test_events_follow_group_reject.py  test_signal.py  test_snapshot.py  test_stream.py  test_stream_extend.py  test_stream_group_reject.py  test_stream_stop.py
tests/e2e/: __init__.py  conftest.py
tests/e2e/auth/: __init__.py  test_status_e2e.py  test_wifi_refresh_bootstrap_e2e.py  test_wifi_revoke_e2e.py  test_wifi_setup_e2e.py
tests/e2e/wifi/: __init__.py  test_deferred_e2e.py  test_list_clients_e2e.py  test_list_groups_e2e.py  test_list_points_e2e.py  test_pause_e2e.py  test_point_health_e2e.py  test_prioritize_e2e.py  test_reboot_e2e.py  test_speedtest_e2e.py  test_unpause_e2e.py
tests/fixtures/: README.md
tests/fixtures/foyer/samples/: access_points.json  devices.json  groups.json
tests/fixtures/sdm/samples/: sample_battery_doorbell.json  sample_indoor_cam.json
tests/sdm/: test_client.py  test_client_stream.py  test_stream_types.py
tests/wifi/: conftest.py  test_action_verbs_experimental_gate.py  test_client.py  test_client_phase_3_1.py  test_credential_chmod.py  test_default_group_resolution.py  test_experimental_gate.py  test_group_assign.py  test_guest.py  test_list_clients.py  test_list_groups.py  test_list_points.py  test_network.py  test_onhub_token.py  test_pause.py  test_point_health.py  test_prioritize.py  test_reboot_group.py  test_reboot_point.py  test_speedtest_history.py  test_speedtest_run.py  test_types.py  test_types_phase_3_1.py  test_unpause.py
