[project]
name = "nest-cli"
version = "0.4.0"
description = "Deterministic CLI for Google Nest cameras (SDM) and Nest Wi-Fi (experimental, Foyer)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Dan Elliott"}]
keywords = ["nest", "google", "smart-home", "cli", "sdm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
dependencies = [
    # Cam side — pin to known-good minor ranges (SRD §15 Decision 23: Google-maintained
    # libs are stable enough for minor pins; wifi-side libs use tighter pins below).
    # google-nest-sdm 8.x+ requires Python >=3.13; 7.1.x is the latest line that
    # honours our SRD-mandated Python >=3.11 floor (SRD §11 "Python 3.11+ required").
    "google-nest-sdm>=7.1,<8",
    "google-cloud-pubsub>=2.36,<3",
    "click>=8.1,<9",
    "pydantic>=2.5,<3",
    # Used by nest_cli.sdm.client for HTTPS calls to smartdevicemanagement.googleapis.com.
    # `requests` is a transitive dep via google-auth-oauthlib but we pin it
    # explicitly so the SDM client does not couple to a transitive's version.
    "requests>=2.31,<3",
]

[project.optional-dependencies]
# Wi-Fi extras are gated behind --experimental-wifi at runtime (SRD §13.2).
# These libraries are single-maintainer with a history of upstream rotations
# (SRD §15 Decision 23), so we pin tight. Rolling forward is an explicit
# nest-cli release.
wifi = [
    "googlewifi>=0.0.21,<0.1",
    "glocaltokens>=0.7,<0.8",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "responses>=0.25",
    # Type stubs for the explicit ``requests`` dep added in Phase 1B.
    "types-requests>=2.31",
]

[project.scripts]
nest-cli = "nest_cli.__main__:main"

[project.urls]
Homepage = "https://github.com/agileguy/nest-cli"
Documentation = "https://github.com/agileguy/nest-cli/tree/main/docs"
Issues = "https://github.com/agileguy/nest-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nest_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = false
disallow_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
